VINE: add miscellaneous plotting tools (#3852)
* add tools

* update doc

* name change

--- a/taskvine/src/tools/Makefile
+++ b/taskvine/src/tools/Makefile
@@ -5,7 +5,7 @@ LOCAL_LINKAGE+=${CCTOOLS_HOME}/taskvine/src/manager/libtaskvine.a ${CCTOOLS_HOME
 LOCAL_CCFLAGS+=-I ${CCTOOLS_HOME}/taskvine/src/manager
 
 PROGRAMS = vine_status vine_benchmark
-SCRIPTS = vine_graph_log vine_graph_workers vine_plot_txn_log vine_profile_dispatch vine_submit_workers
+SCRIPTS = vine_graph_log vine_graph_workers vine_plot_txn_log vine_profile_dispatch vine_submit_workers vine_transfer_plot_animate vine_plot_compose
 TEST_PROGRAMS = vine_test
 TARGETS = $(PROGRAMS) $(TEST_PROGRAMS)
 
