Rely on -fPIC coming from configure. Only build chirp_swig_wrap as part of bindings.

--- a/chirp/src/Makefile
+++ b/chirp/src/Makefile
@@ -6,7 +6,7 @@ include ../../rules.mk
 # -DSQLITE_THREADSAFE=0 - we only use sqlite3 multi-process (i.e. no threads). This disables somewhat costly mutex locks.
 # -Wno-null-pointer-subtraction - Suppress compiler warning of unusual expression.
 # -Wno-unknown-warning - Suppress error on compilers that don't know about the previous warning!
-LOCAL_CCFLAGS = -DSQLITE_DEFAULT_MMAP_SIZE=1073741824 -DSQLITE_TEMP_STORE=3 -DSQLITE_THREADSAFE=0 -fstack-protector-all -Wno-null-pointer-subtraction -Wno-unknown-warning-option -fPIC
+LOCAL_CCFLAGS = -DSQLITE_DEFAULT_MMAP_SIZE=1073741824 -DSQLITE_TEMP_STORE=3 -DSQLITE_THREADSAFE=0 -fstack-protector-all -Wno-null-pointer-subtraction -Wno-unknown-warning-option
 
 # Globus is needed by all executables via libdttools.a/auth_globus.o
 LOCAL_LINKAGE = $(CCTOOLS_GLOBUS_LDFLAGS)
@@ -24,7 +24,7 @@ PROGRAMS_CONFUGA = confuga_adm
 PUBLIC_HEADERS = chirp_global.h chirp_multi.h chirp_reli.h chirp_client.h chirp_stream.h chirp_protocol.h chirp_matrix.h chirp_types.h chirp_recursive.h confuga.h
 SCRIPTS = chirp_audit_cluster chirp_server_hdfs
 SOURCES_CONFUGA = confuga.c confuga_namespace.c confuga_replica.c confuga_node.c confuga_job.c confuga_file.c confuga_gc.c
-SOURCES_LIBRARY = chirp_global.c chirp_multi.c chirp_recursive.c chirp_reli.c chirp_client.c chirp_matrix.c chirp_stream.c chirp_ticket.c json.c json_aux.c chirp_swig_wrap.c
+SOURCES_LIBRARY = chirp_global.c chirp_multi.c chirp_recursive.c chirp_reli.c chirp_client.c chirp_matrix.c chirp_stream.c chirp_ticket.c json.c json_aux.c
 SOURCES_SERVER = sqlite3.c chirp_stats.c chirp_thirdput.c chirp_alloc.c chirp_audit.c chirp_acl.c chirp_group.c chirp_filesystem.c chirp_fs_hdfs.c chirp_fs_local.c chirp_fs_local_scheduler.c chirp_fs_chirp.c chirp_fs_confuga.c chirp_job.c chirp_sqlite.c
 TARGETS = $(PROGRAMS) $(LIBRARIES)
 
