Move MQ source and tests into devel/mq

--- a/dttools/src/Makefile
+++ b/dttools/src/Makefile
@@ -82,7 +82,6 @@ SOURCES = \
 	md5.c \
 	memfdexe.c \
 	mkdir_recursive.c \
-	mq.c \
 	twister.c \
 	nvpair.c \
 	nvpair_jx.c \
@@ -161,7 +160,6 @@ HEADERS_PUBLIC = \
 	load_average.h \
 	md5.h \
 	macros.h \
-	mq.h \
 	path.h \
 	rmonitor_poll.h \
 	rmsummary.h \
@@ -192,7 +190,7 @@ PROGRAMS = $(MOST_PROGRAMS) catalog_query
 
 SCRIPTS = cctools_gpu_autodetect
 TARGETS = $(LIBRARIES) $(PRELOAD_LIBRARIES) $(PROGRAMS) $(TEST_PROGRAMS)
-TEST_PROGRAMS = auth_test disk_alloc_test jx_test microbench multirun jx_count_obj_test jx_canonicalize_test jx_merge_test hash_table_offset_test hash_table_fromkey_test histogram_test category_test jx_binary_test mq_poll_test mq_wait_test mq_store_test bucketing_base_test bucketing_manager_test
+TEST_PROGRAMS = auth_test disk_alloc_test jx_test microbench multirun jx_count_obj_test jx_canonicalize_test jx_merge_test hash_table_offset_test hash_table_fromkey_test histogram_test category_test jx_binary_test bucketing_base_test bucketing_manager_test
 
 all: $(TARGETS) catalog_query
 
