General renaming of sge to uge in code and manuals. sge is retained as an alias for uge in batch queue selection.

--- a/makeflow/src/Makefile
+++ b/makeflow/src/Makefile
@@ -10,7 +10,7 @@ OBJECTS = dag.o dag_node_footprint.o dag_node.o dag_file.o dag_variable.o dag_vi
 PROGRAMS = makeflow makeflow_viz makeflow_analyze makeflow_linker makeflow_status
 SCRIPTS = condor_submit_makeflow makeflow_graph_log makeflow_monitor starch makeflow_linker_perl_driver makeflow_linker_python_driver makeflow_archive_query  makeflow_ec2_setup makeflow_ec2_cleanup makeflow_ec2_estimate 
 
-SCRIPTS = condor_submit_makeflow sge_submit_makeflow makeflow_graph_log makeflow_monitor starch makeflow_linker_perl_driver makeflow_linker_python_driver makeflow_archive_query makeflow_ec2_setup makeflow_ec2_cleanup makeflow_ec2_estimate
+SCRIPTS = condor_submit_makeflow uge_submit_makeflow makeflow_graph_log makeflow_monitor starch makeflow_linker_perl_driver makeflow_linker_python_driver makeflow_archive_query makeflow_ec2_setup makeflow_ec2_cleanup makeflow_ec2_estimate
 
 MAKEFLOW_WRAPPERS =  makeflow_mounts.o
 MAKEFLOW_HOOKS = makeflow_hook_example.o
