--- a/work_queue/src/Makefile
+++ b/work_queue/src/Makefile
@@ -29,9 +29,9 @@ OBJECTS_LIBRARY = $(SOURCES_LIBRARY:%.c=%.o)
 OBJECTS_WORKER = $(SOURCES_WORKER:%.c=%.o)
 PROGRAMS = work_queue_worker work_queue_status work_queue_example
 PUBLIC_HEADERS = work_queue.h work_queue_catalog.h
-SCRIPTS = work_queue_submit_common condor_submit_workers sge_submit_workers torque_submit_workers pbs_submit_workers slurm_submit_workers work_queue_graph_log work_queue_graph_workers
+SCRIPTS = work_queue_submit_common condor_submit_workers uge_submit_workers torque_submit_workers pbs_submit_workers slurm_submit_workers work_queue_graph_log work_queue_graph_workers
 TEST_PROGRAMS = work_queue_example work_queue_test work_queue_test_watch work_queue_priority_test
-TARGETS = $(LIBRARIES) $(PROGRAMS) $(TEST_PROGRAMS) sge_submit_workers bindings
+TARGETS = $(LIBRARIES) $(PROGRAMS) $(TEST_PROGRAMS) uge_submit_workers bindings
 
 all: $(TARGETS)
 
@@ -43,7 +43,7 @@ $(PROGRAMS) $(TEST_PROGRAMS): libwork_queue.a $(EXTERNAL_DEPENDENCIES)
 bindings: libwork_queue.a work_queue.i $(EXTERNAL_DEPENDENCIES)
 	@$(MAKE) -C bindings
 
-sge_submit_workers: sge_submit_workers_common
+uge_submit_workers: uge_submit_workers_common
 	sed -e "s/SGE_CUSTOM_PARAMETERS/${CCTOOLS_SGE_PARAMETERS}/" $< > $@
 	chmod 755 $@
 
@@ -60,7 +60,7 @@ install: all
 	@$(MAKE) -C bindings install
 
 clean:
-	rm -rf $(OBJECTS) $(LIBRARIES) $(PROGRAMS) $(TEST_PROGRAMS) *.o sge_submit_workers
+	rm -rf $(OBJECTS) $(LIBRARIES) $(PROGRAMS) $(TEST_PROGRAMS) *.o uge_submit_workers
 	@$(MAKE) -C bindings clean
 
 test: all
