--- a/batch_job/src/Makefile
+++ b/batch_job/src/Makefile
@@ -56,3 +56,15 @@ install:
 clean:
 	rm -rf $(OBJECTS) $(LIBRARIES) $(PROGRAMS) *.o
 
+lint:
+	if ( ! clang-format -Werror --dry-run --style='file:../../.clang-format' $(SOURCES));\
+	then\
+		echo  "========================================================";\
+		echo  "NOTICE: Run `make format` to format your latest changes.";\
+		echo  "========================================================";\
+		exit 1;\
+	fi
+
+format:
+	clang-format -i $(SOURCES)
+
