vine: fixed_location task groups  (#3787)
* merge vine_task.c

* unused code

* add worker code

* rebase

* more merging

* regular task issue fix

* cleanup allocations

* compatible with function calls

* remove group reference on cancel

* add tune option for task groups

* format

* get groupid from file recovery task

* comment

* merge in priority queue

* worker cache ensure check queued tasks

* commit task after group list removal

* do not group recovery tasks

* format

* format after rebase

* add group counter to manager

* do not check refcount

* change group hash table to itable

* change type at worker

--- a/taskvine/src/manager/Makefile
+++ b/taskvine/src/manager/Makefile
@@ -27,7 +27,8 @@ SOURCES = \
 	vine_current_transfers.c \
 	vine_file_replica_table.c \
 	vine_fair.c \
-	vine_runtime_dir.c
+	vine_runtime_dir.c \
+	vine_task_groups.c
 
 PUBLIC_HEADERS = taskvine.h
 
