--- a/dttools/src/Makefile
+++ b/dttools/src/Makefile
@@ -93,6 +93,8 @@ SOURCES = \
 	preadwrite.c \
 	priority_queue.c \
 	priority_queue_test.c \
+	priority_map.c \
+	priority_map_test.c \
 	process.c \
 	random.c \
 	rmonitor.c \
@@ -193,7 +195,7 @@ PROGRAMS = $(MOST_PROGRAMS) catalog_query
 
 SCRIPTS = cctools_gpu_autodetect
 TARGETS = $(LIBRARIES) $(PRELOAD_LIBRARIES) $(PROGRAMS) $(TEST_PROGRAMS)
-TEST_PROGRAMS = auth_test disk_alloc_test jx_test microbench multirun jx_count_obj_test jx_canonicalize_test jx_merge_test hash_table_offset_test hash_table_fromkey_test histogram_test category_test jx_binary_test bucketing_base_test bucketing_manager_test priority_queue_test
+TEST_PROGRAMS = auth_test disk_alloc_test jx_test microbench multirun jx_count_obj_test jx_canonicalize_test jx_merge_test hash_table_offset_test hash_table_fromkey_test histogram_test category_test jx_binary_test bucketing_base_test bucketing_manager_test priority_queue_test priority_map_test
 
 all: $(TARGETS) catalog_query
 
