--- a/dttools/src/.gitignore
+++ b/dttools/src/.gitignore
@@ -40,3 +40,5 @@ bucketing_base_test
 bucketing_manager_test
 hash_table_fromkey_test
 hash_table_offset_test
+priority_queue_test
+priority_map_test
