--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -6,8 +6,6 @@ on:
     branches:
       - master
       - 'release/*'
-  schedule:
-      - cron: '0 0 * * *' # midnight UTC
   workflow_dispatch:
     inputs:
       version:
@@ -26,19 +24,14 @@ jobs:
     container: ${{ format('cclnd/cctools-env:x86_64-{0}', matrix.os-name) }}
     timeout-minutes: 30
     env:
-      CCTOOLS_OUTPUT: ${{ format('cctools-{0}-x86_64-{1}.tar.gz', github.event.inputs.version || 'nightly', matrix.os-name) }}
+      CCTOOLS_OUTPUT: ${{ format('cctools-{0}-x86_64-{1}.tar.gz', github.event.inputs.version, matrix.os-name) }}
       CCTOOLS_DOCKER_GITHUB: ${{ matrix.os-name }}
     strategy: 
       matrix:
         os-name: ['almalinux8', 'almalinux9', 'ubuntu20.04', 'ubuntu22.04', 'ubuntu24.04']
     steps:
-      - name: checkout CCTools from master head
-        if: github.event_name == 'schedule'
-        uses: actions/checkout@v3
-        with:
-          ref: master
       - name: checkout CCTools from branch head
-        if: github.event_name == 'push' || github.event_name == 'pull_request'
+        if: github.event_name != 'workflow_dispatch'
         uses: actions/checkout@v3
       - name: checkout CCTools from tag
         if: github.event_name == 'workflow_dispatch'
@@ -53,7 +46,7 @@ jobs:
         run: ${GITHUB_WORKSPACE}/packaging/build-docker/build.sh
       - name: deploy
         uses: ncipollo/release-action@v1
-        if: github.event_name == 'workflow_dispatch' || github.event_name == 'schedule'
+        if: github.event_name == 'workflow_dispatch'
         with:
           artifacts: /tmp/${{ env.CCTOOLS_OUTPUT }}
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -65,7 +58,7 @@ jobs:
           prerelease: true
           replacesArtifacts: true
           commit: ${{ steps.vars.output.tag_sha }}
-          tag: ${{ github.event.inputs.tag || 'master' }}
+          tag: ${{ github.event.inputs.tag }}
 
   build-conda-linux:
     runs-on: ubuntu-latest
@@ -73,13 +66,8 @@ jobs:
     env:
       CCTOOLS_OUTPUT: ${{ format('cctools-{0}-x86_64-linux-conda.tar.gz', github.event.inputs.version) }}
     steps:
-      - name: checkout CCTools from master head
-        if: github.event_name == 'schedule'
-        uses: actions/checkout@v4
-        with:
-          ref: master
-      - name: checkout CCTools from branch head
-        if: github.event_name == 'push' || github.event_name == 'pull_request'
+      - name: Checkout CCTools from branch head
+        if: github.event_name != 'workflow_dispatch'
         uses: actions/checkout@v4
       - name: Checkout CCTools from tag
         if: github.event_name == 'workflow_dispatch'
