--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -15,29 +15,60 @@ on:
         description: 'Tag to deploy (e.g. release/7.2.1)'
         required: true
 
-
 name: Regression Testing
-
 jobs:
+  tag-devel:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout master branch
+        if: ${{ (github.event_name == 'push') }}
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Tag latest commit as devel
+        if: ${{ (github.event_name == 'push') }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -d devel || true
+          git push --delete origin devel || true
+          git tag devel
+          git push origin devel
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build-native-linux:
     runs-on: ubuntu-latest
     container: ${{ format('cclnd/cctools-env:x86_64-{0}', matrix.os-name) }}
     timeout-minutes: 30
+    needs: tag-devel
     env:
       CCTOOLS_OUTPUT: ${{ format('cctools-{0}-x86_64-{1}.tar.gz', github.event.inputs.version, matrix.os-name) }}
       CCTOOLS_DOCKER_GITHUB: ${{ matrix.os-name }}
-    strategy: 
+    strategy:
       matrix:
         os-name: ['almalinux8', 'almalinux9', 'ubuntu20.04', 'ubuntu22.04', 'ubuntu24.04']
     steps:
       - name: checkout CCTools from branch head
         if: github.event_name != 'workflow_dispatch'
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+      - name: Set tag and draft for master
+        if: github.event_name == 'push'
+        run: |
+          echo "branch_tag=devel" >> $GITHUB_OUTPUT
+          echo "draft=false" >> $GITHUB_OUTPUT
       - name: checkout CCTools from tag
         if: github.event_name == 'workflow_dispatch'
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.tag }}
+      - name: Set tag and draft for release
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          echo "branch_tag=${{ github.event.inputs.tag }}" >> $GITHUB_OUTPUT
+          echo "draft=true" >> $GITHUB_OUTPUT
       - name: Get sha of tag
         id: vars
         shell: bash
@@ -46,19 +77,19 @@ jobs:
         run: ${GITHUB_WORKSPACE}/packaging/build-docker/build.sh
       - name: deploy
         uses: ncipollo/release-action@v1
-        if: github.event_name == 'workflow_dispatch'
+        if: ${{ (github.event_name == 'workflow_dispatch') || (github.event == 'push') }}
         with:
           artifacts: /tmp/${{ env.CCTOOLS_OUTPUT }}
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
           artifactContentType: application/gzip
-          draft: true
+          draft: ${{ steps.vars.output.draft }}
           omitBody: true
           omitBodyDuringUpdate: true
           prerelease: true
           replacesArtifacts: true
           commit: ${{ steps.vars.output.tag_sha }}
-          tag: ${{ github.event.inputs.tag }}
+          tag: ${{ steps.vars.output.branch_tag }}
 
   build-conda-linux:
     runs-on: ubuntu-latest
