PLEDGE: Unified under 1 binary This is the rework of the PLEDGE codebase to start matching the goal of the project, some changes include: - Added stat support and changed the parser to deal with it accordingly - Code sharing between tracer and enforcing - Makefile and CMakeFile.txt updated accordingly - No need to do LD_PRELOAD manually, we write an so and set LD_PRELOAD at runtime - Updated README.md - Added a SYSCALLS.md file with relevant information about how everything works, though this document is soon to be a stub
Added images for the docs

--- a/devel/pledge/CMakeLists.txt
+++ b/devel/pledge/CMakeLists.txt
@@ -1,18 +1,36 @@
 cmake_minimum_required(VERSION 3.30)
 
-project(enforcer C)
+project(pledge C)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED on)
 
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wpedantic")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fdiagnostics-color=always")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ldl")
 
-# Needed for dlsym
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -ldl")
+include_directories(src)
 
-set (SRCS
+set(SRCS
 	src/enforcer.c
+	src/list.c
+	src/util.c
+)
+
+set(EXE_SRCS
+	src/pledge.c
+	src/list.c
+	src/util.c
 )
 add_library(enforcer SHARED "${SRCS}")
+target_link_options(enforcer PRIVATE "-ldl")
+
+add_custom_command(
+	OUTPUT libenforcer.h
+	COMMAND xxd -i -n minienforcer ${CMAKE_CURRENT_BINARY_DIR}/libenforcer.so > ${CMAKE_CURRENT_LIST_DIR}/src/libenforcer.h
+	DEPENDS enforcer
+	WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
+)
+
+
+add_executable(pledge "${EXE_SRCS}" libenforcer.h)
+# target_compile_options(pledge PRIVATE "-g")
