--- a/devel/pledge/Makefile
+++ b/devel/pledge/Makefile
@@ -1,31 +1,55 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -Wpedantic
-CFLAGS += -fpic
+CFLAGS += -fdiagnostics-color=always
 # some posix functions werent added to standard c until c23, so we have
 # to specify
 # POSIX_C_SOURCE is saying that we want to enable functionality from 2008 posix
-CFLAGS += -std=c11 -D_POSIX_C_SOURCE=200809L
+# CFLAGS += -std=c11 -D_POSIX_C_SOURCE=200809L
 # Alternatively, this enables extensions and all functionality
-#CFLAGS += -std=gnu11
+CFLAGS += -std=gnu11
+CFLAGS += -I$(INCDIR)
 
 RELFLGS = -O3
 
-LDFLAGS += -ldl -shared
-
 BUILDDIR = ./build
-TARGET = $(BUILDDIR)/libenforcer.so
 
-SRCS = src/enforcer.c
-OBJ = $(BUILDDIR)/enforcer.o
+COMMON_SRCS = src/list.c src/util.c
 
-all: $(TARGET)
+ENFORCER = $(BUILDDIR)/libenforcer.so
+ENF_LDFLAGS += $(LDFLAGS) -ldl -shared
+ENF_CFLAGS += $(CFLAGS) -fPIC
+ENF_SRCS = src/enforcer.c
+ENF_OBJ = $(BUILDDIR)/enforcer.o
 
-$(TARGET): $(OBJ)
-	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ) -o $(TARGET)
+ENFORCER_H = src/libenforcer.h
 
-# Order only build dir
-$(OBJ) : $(SRCS) | $(BUILDDIR)
-	$(CC) $(CFLAGS) -c $< -o $@
+PLEDGE = $(BUILDDIR)/pledge
+PL_LDFLAGS += $(LDFLAGS)
+PL_CFLAGS += $(CFLAGS)
+PL_SRCS = src/pledge.c src/list.c src/util.c
+PL_OBJ = $(BUILDDIR)/pledge.o
+
+
+INCDIR = ./src
+
+
+all: $(PLEDGE)
+
+$(PLEDGE): $(ENFORCER_H) $(PL_OBJ)
+	$(CC) $(PL_CFLAGS) $(PL_LDFLAGS) $(PL_OBJ) $(COMMON_SRCS) -o $(PLEDGE)
+
+$(ENFORCER_H): $(ENFORCER)
+	xxd -i -n minienforcer $(BUILDDIR)/libenforcer.so > src/libenforcer.h
+
+$(ENFORCER): $(ENF_OBJ)
+	$(CC) $(ENF_CFLAGS) $(ENF_LDFLAGS) $(ENF_OBJ) $(COMMON_SRCS) -o $(ENFORCER)
+
+$(PL_OBJ) : $(PL_SRCS) | $(BUILDDIR)
+	$(CC) $(PL_CFLAGS) -c $< -o $@
+
+# # Order only build dir
+$(ENF_OBJ) : $(ENF_SRCS) | $(BUILDDIR)
+	$(CC) $(ENF_CFLAGS) -c $< -o $@
 
 $(BUILDDIR):
 	mkdir $@
