PLEDGE: Migrated to cctools list data structure

--- a/devel/pledge/Makefile
+++ b/devel/pledge/Makefile
@@ -2,25 +2,31 @@ include ../../config.mk
 include ../../rules.mk
 
 CC = gcc
-CFLAGS = -Wall -Wextra -Wpedantic
-CFLAGS += -fdiagnostics-color=always
+LOCAL_CFLAGS = -Wall -Wextra -Wpedantic
+LOCAL_CFLAGS += -fdiagnostics-color=always
+INCDIR = ./src
+INCDIR += -I$(CCTOOLS_HOME)/dttools/src
+
 # some posix functions werent added to standard c until c23, so we have
 # to specify
 # POSIX_C_SOURCE is saying that we want to enable functionality from 2008 posix
-# CFLAGS += -std=c11 -D_POSIX_C_SOURCE=200809L
+# LOCAL_CFLAGS += -std=c11 -D_POSIX_C_SOURCE=200809L
 # Alternatively, this enables extensions and all functionality
-CFLAGS += -std=gnu11
-CFLAGS += -I$(INCDIR)
+LOCAL_CFLAGS += -I$(INCDIR)
 
 RELFLGS = -O3
 
 BUILDDIR = ./build
 
-COMMON_SRCS = src/list.c src/util.c
+# LDFLAGS += $(CCTOOLS_HOME)/dttools/src/libdttools.a
+
+# COMMON_SRCS = src/pl_list.c src/util.c
+COMMON_SRCS = src/list_util.c src/util.c
+COMMON_SRCS += $(CCTOOLS_HOME)/dttools/src/libdttools.a
 
 ENFORCER = $(BUILDDIR)/libenforcer.so
 ENF_LDFLAGS += $(LDFLAGS) -ldl -shared
-ENF_CFLAGS += $(CFLAGS) -fPIC
+ENF_LOCAL_CFLAGS += $(LOCAL_CFLAGS) -fPIC
 ENF_SRCS = src/enforcer.c
 ENF_OBJ = $(BUILDDIR)/enforcer.o
 
@@ -28,31 +34,31 @@ ENFORCER_H = src/libenforcer.h
 
 PLEDGE = $(BUILDDIR)/pledge
 PL_LDFLAGS += $(LDFLAGS)
-PL_CFLAGS += $(CFLAGS)
-PL_SRCS = src/pledge.c src/list.c src/util.c
+PL_LOCAL_CFLAGS += $(LOCAL_CFLAGS)
+PL_SRCS = src/pledge.c
 PL_OBJ = $(BUILDDIR)/pledge.o
 
+LOCAL_CFLAGS += -std=gnu11
 
-INCDIR = ./src
-
+LDFLAGS += -lm
 
 all: $(PLEDGE)
 
 $(PLEDGE): $(ENFORCER_H) $(PL_OBJ)
-	$(CC) $(PL_CFLAGS) $(PL_LDFLAGS) $(PL_OBJ) $(COMMON_SRCS) -o $(PLEDGE)
+	$(CC) $(PL_LOCAL_CFLAGS) $(PL_OBJ) $(COMMON_SRCS) -o $(PLEDGE) $(PL_LDFLAGS)
 
 $(ENFORCER_H): $(ENFORCER)
 	xxd -i -n minienforcer $(BUILDDIR)/libenforcer.so > src/libenforcer.h
 
 $(ENFORCER): $(ENF_OBJ)
-	$(CC) $(ENF_CFLAGS) $(ENF_LDFLAGS) $(ENF_OBJ) $(COMMON_SRCS) -o $(ENFORCER)
+	$(CC) $(ENF_LOCAL_CFLAGS) $(ENF_OBJ) $(COMMON_SRCS) -o $(ENFORCER) $(ENF_LDFLAGS)
 
 $(PL_OBJ) : $(PL_SRCS) | $(BUILDDIR)
-	$(CC) $(PL_CFLAGS) -c $< -o $@
+	$(CC) $(PL_LOCAL_CFLAGS) -c $< -o $@
 
 # # Order only build dir
 $(ENF_OBJ) : $(ENF_SRCS) | $(BUILDDIR)
-	$(CC) $(ENF_CFLAGS) -c $< -o $@
+	$(CC) $(ENF_LOCAL_CFLAGS) -c $< -o $@
 
 $(BUILDDIR):
 	mkdir $@
